--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
     "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "vue-i18n": "^9.2.2",
-    "pinia": "^3.0.1",
     "@quasar/extras": "^1.16.4",
+    "@types/marked": "^5.0.2",
+    "@types/sortablejs": "^1.15.8",
+    "@vueuse/core": "^12.7.0",
+    "axios": "^1.2.1",
+    "marked": "^15.0.7",
+    "pinia": "^3.0.1",
     "quasar": "^2.16.0",
+    "sortablejs": "^1.15.6",
+    "uuid": "^11.1.0",
     "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.0.12",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
-    "@types/node": "^20.5.9",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@quasar/app-vite": "^2.1.0",
+    "@types/node": "^20.5.9",
     "autoprefixer": "^10.4.2",
     "typescript": "~5.5.3"
   },
